6.0.8
  150201
  Improvements
  * #i0022:       Display link to shipping details in the list view
  * #i0021/#163:  Quick Shop displays in the single view the Browser plugin only: it hides other content elements
                  This is the default, if you have installed Quick Shop with the whole website.
                  See sample configuration at:
                  * Configuration/TypoScript/62037/page/setup.ts
                  * Ressources/Private/Samples/TypoScript/displayShopOnly
                    * extension
                      * automaketemplate/setup.txt
                      * fluid/setup.txt
  * #i0020/#162:  Caddy position can be [right in text] or [at the bottom]
                  * New property in the Constant Editor
                    plugin.quick_shop.layout.caddy.position

6.0.7
  14-12-12
  Improvements
  * #i0019: Upgrade for Browser 6.0.7

6.0.2
  2014-11-19
  Manual
  * #i0018: Update

6.0.0
  2014-10-04
  Major Features
  * #62059: teaser fields
  * #62036: Manage all relations in one table
            Will replaced
            * tx_quickshop_products_category_mm
            * tx_quickshop_products_dimension_mm
            * tx_quickshop_products_material_mm
            by
            * tx_quickshop_mm
  * #62029: Upgrade TYPO3 6.2
            * Browser 6.0
            * Foundation 5.4
            * TYPO3 6.2
              * #i0016: linkhandler fixed for TYPO3 6.2
              * #i0015: cps_tcatree fixed for TYPO3 6.2
  Improvement
  * #i0017: imagewidth and imageheight can be strings like 140c: Update databse!
  * #62037: unique uid for the view: 62037
  * #i0015: showUid is moved to itemUid
  Bug
  * #i0016: caption was missing in TCA

4.0.6
  2014-05-17
  Improvement
  * #i0014: Corporate design: modified icon

4.0.5
  2014-03-03
  Improvement
  * #i0013: tca.php: exclude fields are maintained
  * #i0012: ean (new)
  * #i0011: SKU isn't required
  * #i0010: SKU is required
  Bugfix
  * #i0011: inkl. MwSt. wasn't localised

4.0.4